--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Task</h1>
+<h1><%=t 'tasks.edit.title'%></h1>
 
 <%= render 'form', task: @task %>
 
-<%= link_to 'Show', @task %> |
-<%= link_to 'Back', tasks_path %>
+<%= link_to (t '.to_show_page'), @task %> |
+<%= link_to (t '.to_back_page'), tasks_path %>
