--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -20,7 +20,10 @@
     <%= form.label :description %>
     <%= form.text_area :description %>
   </div>
-
+  <div class="field">
+    <%= form.label :deadline %>
+    <%= form.date_field :deadline %>
+  </div>
   <div class="actions">
     <%= form.submit %>
   </div>
