--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -10,5 +10,11 @@
   <%= @task.description %>
 </p>
 
+<p>
+  <strong><%= t 'tasks.show.deadline' %></strong>
+  <%= @task.deadline %>
+</p>
+
+
 <%= link_to (t '.to_edit_page'), edit_task_path(@task) %> |
 <%= link_to (t '.to_back_page'), tasks_path %>
