--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -24,6 +24,10 @@
     <%= form.label :deadline %>
     <%= form.date_field :deadline %>
   </div>
+  <div class="field">
+    <%= form.label :status %>
+    <%= form.select :status, [["未着手", "未着手"], ["着手中", "着手中"], ["完了", "完了"]], include_blank: "選択して下さい" %>
+  </div>
   <div class="actions">
     <%= form.submit %>
   </div>
