--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -8,6 +8,7 @@
       <th><%= t 'tasks.index.name' %></th>
       <th><%= t 'tasks.index.description' %></th>
       <th><%= t 'tasks.index.deadline' %></th>
+      <th><%= t 'tasks.index.status' %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +19,7 @@
         <td class="task_row"><%= task.name %></td>
         <td><%= task.description %></td>
         <td><%= task.deadline %></td>
+        <td><%= task.status %></td>
         <td><%= link_to (t '.to_show_page'), task %></td>
         <td><%= link_to (t '.to_edit_page'), edit_task_path(task) %></td>
         <td><%= link_to (t '.to_delete'), task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
