優先順位のソート機能追加

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -24,6 +24,7 @@
       <th><%= t 'tasks.index.description' %></th>
       <th><%= t 'tasks.index.deadline' %></th>
       <th><%= t 'tasks.index.status' %></th>
+      <th><%= t 'tasks.index.priority' %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -35,6 +36,7 @@
         <td><%= task.description %></td>
         <td><%= task.deadline %></td>
         <td><%= task.status %></td>
+        <td><%= task.priority %></td>
         <td><%= link_to (t '.to_show_page'), task %></td>
         <td><%= link_to (t '.to_edit_page'), edit_task_path(task) %></td>
         <td><%= link_to (t '.to_delete'), task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -48,3 +50,4 @@
 <%= link_to (t '.to_new_page'), new_task_path %>
 
 <%= link_to "終了期限でソートする", tasks_path(sort_expired: "true") %>
+<%= link_to "優先順位でソートする", tasks_path(sort_priority: "true") %>
