--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -15,5 +15,9 @@
   <strong><%= t 'tasks.show.status' %></strong>
   <%= @task.status %>
 </p>
+<p>
+  <strong><%= t 'tasks.show.priority' %></strong>
+  <%= @task.priority %>
+</p>
 <%= link_to (t '.to_edit_page'), edit_task_path(@task) %> |
 <%= link_to (t '.to_back_page'), tasks_path %>
