--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -2,7 +2,6 @@
   <% if task.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(task.errors.count, (t 'tasks.new.error')) %><span> </span><%= t 'tasks.new.error_message' %></h2>
-
       <ul>
       <% task.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -10,12 +9,11 @@
       </ul>
     </div>
   <% end %>
-
+  <div class="wrapper">
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
   </div>
-
   <div class="field">
     <%= form.label :description %>
     <%= form.text_area :description %>
@@ -35,4 +33,5 @@
   <div class="actions">
     <%= form.submit %>
   </div>
+</div>
 <% end %>
