--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,19 +1,19 @@
 <p id="notice"><%= notice %></p>
 
 <h1><%= t 'tasks.index.tasks' %></h1>
-
+<p class="new_task"><%= link_to (t '.to_new_page'), new_task_path %></p>
 <table>
   <%= form_with(scope: :search, url:tasks_path, method: :get,local: true)do |f| %>
   <tr>
-    <th><%= f.label(:name, 'タスク名') %></th>
+    <th><%= f.label(:name, (t 'tasks.index.name')) %></th>
     <td><%= f.text_field :name %></td>
   </tr>
 
-    <th><%= f.label(:status, '進捗') %></th>
+    <th><%= f.label(:status, (t 'tasks.index.status')) %></th>
     <td><%= f.select :status, [["未着手", "未着手"], ["着手中", "着手中"], ["完了", "完了"]], include_blank: "選択して下さい" %></td>
   </tr>
   <tr>
-    <td><%= f.submit('検索')%></td>
+    <td colspan="2" class="submit"><%= f.submit(t 'tasks.index.search')%></td>
   </tr>
   <% end %>
 </table>
@@ -45,10 +45,6 @@
     <%= paginate @tasks %>
   </tbody>
 </table>
-
 <br>
-
-<%= link_to (t '.to_new_page'), new_task_path %>
-
-<%= link_to "終了期限でソートする", tasks_path(sort_expired: "true") %>
-<%= link_to "優先順位でソートする", tasks_path(sort_priority: "true") %>
+<%= link_to (t '.sort_of_deadline'), tasks_path(sort_expired: "true") %>
+<%= link_to (t '.sort_of_priority'), tasks_path(sort_priority: "true") %>
