--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,23 +1,25 @@
 <p id="notice"><%= notice %></p>
-<p>
-  <strong><%= t 'tasks.show.name' %></strong>
-  <%= @task.name %>
-</p>
-<p>
-  <strong><%= t 'tasks.show.description' %></strong>
-  <%= @task.description %>
-</p>
-<p>
-  <strong><%= t 'tasks.show.deadline' %></strong>
-  <%= @task.deadline %>
-</p>
-<p>
-  <strong><%= t 'tasks.show.status' %></strong>
-  <%= @task.status %>
-</p>
-<p>
-  <strong><%= t 'tasks.show.priority' %></strong>
-  <%= @task.priority %>
-</p>
+<div class="wrapper">
+  <div class="field"><strong><%= t 'tasks.show.name' %></strong>
+    <%= @task.name %>
+  </div>
+  <div class="field">
+    <strong><%= t 'tasks.show.description' %></strong>
+    <%= @task.description %>
+  </div>
+  <div class="field">
+    <strong><%= t 'tasks.show.deadline' %></strong>
+    <%= @task.deadline %>
+  </div>
+  <div class="field">
+    <strong><%= t 'tasks.show.status' %></strong>
+    <%= @task.status %>
+  </div>
+  <div class="field">
+    <strong><%= t 'tasks.show.priority' %></strong>
+    <%= @task.priority %>
+  </div>
+</div>
+<br>
 <%= link_to (t '.to_edit_page'), edit_task_path(@task) %> |
 <%= link_to (t '.to_back_page'), tasks_path %>
