--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Admin::Users#index</h1>
-<p>Find me in app/views/admin/users/index.html.erb</p>
+<h1>users</h1>
+<p><%= link_to '新規ユーザー登録', new_admin_user_path %></p>
+<table>
+  <tr>
+    <th>privileges</th>
+    <th>user_name</th>
+    <th>task_count</th>
+    <th colspan="3"></th>
+  </tr>
+  <% @users.each do |user| %>
+  <tr>
+    <td><%= user.admin == true ? "○" : "" %></td>
+    <td><%= user.name %></td>
+    <td><%= user.tasks.count %></td>
+    <td><%= link_to 'show',admin_user_path(user.id) %></td>
+    <td><%= link_to 'edit',edit_admin_user_path(user.id) %></td>
+    <td><%= link_to 'destroy',admin_user_path(user.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  </tr>
+  <% end %>
+</table>
