--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -9,7 +9,7 @@
   </tr>
   <% @users.each do |user| %>
   <tr>
-    <td><%= user.admin == true ? "○" : "" %></td>
+    <td><% if user.admin == true %>○<% else %>×<% end %></td>
     <td><%= user.name %></td>
     <td><%= user.tasks.count %></td>
     <td><%= link_to 'show',admin_user_path(user.id) %></td>
