--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,7 +1,7 @@
-<h1><%= @user.name %>のページ</h1>
+<h2><%= t 'admin.users.show.admin' %><%= @user.name %><%= t 'admin.users.show.page' %></h2>
 <table>
   <tr>
-    <th><%= 'name' %></th>
+    <th><%= t 'admin.users.show.name' %></th>
   </tr>
   <% @user.tasks.each do |task| %>
    <tr>
