--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,7 +1,7 @@
-<h1>Sign up</h1>
+<h2><%= t 'admin.users.new.sign_up' %></h2>
 <% if @user.errors.any? %>
   <div id="error_explanation">
-    <h2><%= pluralize(@user.errors.count, "error") %> prohibited this <%= @user.name %> from being saved:</h2>
+    <h2><%= pluralize(@user.errors.count, (t 'admin.users.new.error')) %><span> </span><%= @user.name %><%= t 'admin.users.new.error_message' %></h2>
     <ul>
     <% @user.errors.full_messages.each do |message| %>
       <li><%= message %></li>
@@ -18,6 +18,7 @@
   <%= f.password_field :password %>
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %>
-  <%= f.submit "Create my account" %>
   <br>
+  <br>
+  <%= f.submit (t 'admin.users.new.submit') %>
 <% end %>
