--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,22 +4,19 @@
     <title>EverleafApp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
     <% if logged_in? %>
-      <%= link_to "Profile", user_path(current_user.id) %>
-      <%= link_to "Logout", session_path(current_user.id), method: :delete %>
+      <%= link_to (t 'layouts.application.profile'), user_path(current_user.id) %>
+      <%= link_to (t 'layouts.application.logout'), session_path(current_user.id), method: :delete %>
     <% else %>
-      <%= link_to "Sign up", new_user_path %>
-      <%= link_to "Login", new_session_path %>
+      <%= link_to (t 'layouts.application.sign_up'), new_user_path %>
+      <%= link_to (t 'layouts.application.log_in'), new_session_path %>
     <% end %>
     <br><br>
     <p id="notice"><%= notice %></p>
-
     <%= yield %>
   </body>
 </html>
