viewファイルにlabel追加

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -30,6 +30,10 @@
     <%= form.label :priority %>
     <%= form.select :priority, options_for_select(Task.priorities.keys), {prompt: "選択してください"} %>
   </div>
+  <% Label.all.each do |label| %>
+  <%= form.check_box :label_ids, { multiple: true, checked: label[:checked], disabled: label[:disabled], include_hidden: false }, label[:id] %>
+  <%= form.label :label_ids, label.name, class:"label-bg", value: label[:id]%>
+  <% end %>
   <div class="actions">
     <%= form.submit %>
   </div>
