ラベル機能追加

--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -25,3 +25,15 @@
   <br>
   <%= f.submit (t 'admin.users.edit.submit') %>
 <% end %>
+© 2021 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
