--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -30,10 +30,13 @@
     <%= form.label :priority %>
     <%= form.select :priority, options_for_select(Task.priorities.keys), {prompt: "選択してください"} %>
   </div>
+  <div class="field">
+  <h4><strong>ラベル</strong></h4>
   <% Label.all.each do |label| %>
-  <%= form.check_box :label_ids, { multiple: true, checked: label[:checked], disabled: label[:disabled], include_hidden: false }, label[:id] %>
-  <%= form.label :label_ids, label.name, class:"label-bg", value: label[:id]%>
+    <%= form.check_box :label_ids, { multiple: true, checked: label[:checked], disabled: label[:disabled], include_hidden: false }, label[:id] %>
+    <%= label.name %>
   <% end %>
+  </div>
   <div class="actions">
     <%= form.submit %>
   </div>
