--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,6 +11,10 @@
     <td><%= f.select :status, [["未着手", "未着手"], ["着手中", "着手中"], ["完了", "完了"]], include_blank: "選択して下さい" %></td>
   </tr>
   <tr>
+    <th><%= f.label(:label, (t 'tasks.index.label')) %></th>
+    <th><%= f.select :label, Label.all.collect{ |label| [label.name, label.id]}, include_blank: "選択して下さい" %></th>
+  </tr>
+  <tr>
     <td colspan="2" class="submit"><%= f.submit(t 'tasks.index.search')%></td>
   </tr>
   <% end %>
