--- a/app/views/admin/labels/index.html.erb
+++ b/app/views/admin/labels/index.html.erb
@@ -2,7 +2,7 @@
 <p class="new_task"><%= link_to (t 'admin.labels.index.to_new_page'), new_admin_label_path %></p>
 <table>
 <% @labels.each do |label| %>
-  <tr><td><%= label.name %></td>
+  <tr><td class="destroy_test"><%= label.name %></td>
   <td><%= link_to (t 'admin.labels.index.destroy'), admin_label_path(label.id), method: :delete, data: { confirm: '削除してよろしいですか？'} %></td>
   </tr>
 <% end %>
